# ScheduledReportAggregator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
docker/: compose.yaml
src/: __main__.py  custom_types.py  environment_init_vars.py  environment_settings.py  ftp_configs.py  scheduler_config.py
src/jobs/: __init__.py  bal_sheet_job.py  base.py  timeclock_job.py
src/jobs/timeclock_job/: __init__.py  allotted_hours_model.py
src/scheduled_report_aggregator/: __main__.py  custom_types.py  environment_init_vars.py  environment_settings.py  ftp_configs.py  logging_config.py  logging_config.toml  remote_logging_config.toml  scheduler_config.py  startup.py
src/scheduled_report_aggregator/jobs/: bal_sheet_job.py  base.py  employee_disc_job.py
src/scheduled_report_aggregator/jobs/timeclock_job/: __init__.py
