[project]
  name            = "scheduled-report-aggregator"
  version         = "1.1.16"
  description     = "Add your description here"
  readme          = "README.md"
  requires-python = ">=3.14"
  dependencies    = [
    "aeth-ext[sftp, async]>=1.3.4",
    "aiologic>=0.16.0",
    "apscheduler>=3.11.2",
    "gspread>=6.2.1",
    "pandas[performance]>=3.0.3",
    "paramiko>=5.0.0",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "timeclock-entry-processor>=1.7.8",
  ]

[dependency-groups]
  dev = [
    "apscheduler-stubs>=0.1.0.dev2",
    "pandas-stubs>=3.0.3.260530",
    "poe-tasks>=1.0.1",
    "poethepoet>=0.46.0",
    "pytest>=9.0.3",
    "types-python-dateutil>=2.9.0.20260518",
  ]

[build-system]
  requires      = [
    "uv_build>=0.11.2,<0.12.0",
  ]
  build-backend = "uv_build"

[tool.poe]
  include_script = "poe_tasks:tasks"

[tool.ruff]
  extend = "../pyproject.toml"

  src = ["./src"]

[tool.uv]
  environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
  ]

  [tool.uv.sources]
    aeth-ext                  = [
      { index = "SFTPyPI", marker = "sys_platform == 'linux'" },
      { path = "../aeth_ext", editable = true, marker = "sys_platform == 'win32'" },
    ]
    timeclock-entry-processor = [
      { index = "SFTPyPI", marker = "sys_platform == 'linux'" },
      { path = "../timeclock_entry_processor", editable = true, marker = "sys_platform == 'win32'" }
    ]
    poe-tasks                 = [{ index = "SFTPyPI" }]

  [[tool.uv.index]]
    name        = "SFTPyPI"
    url         = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/+simple"
    publish-url = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/"
    explicit    = true
