[project]
  name            = "scheduled-report-aggregator"
  version         = "2.0.0"
  description     = "Add your description here"
  requires-python = ">=3.14"
  dependencies    = [
    "aeth-ext[sftp, async]>=3.3.5",
    "aiologic>=0.16.0",
    "apscheduler>=3.11.2",
    "gspread>=6.2.1",
    "pandas[performance]>=3.0.3",
    "paramiko>=5.0.0",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "timeclock-entry-processor>=1.9.1",
]

  [project.scripts]
    run-app-scheduled-report-aggregator = "scheduled_report_aggregator.__main__:run_app"

[dependency-groups]
  dev = [
    "apscheduler-stubs>=0.1.0.dev2",
    "pandas-stubs>=3.0.3.260530",
    "poe-tasks>=4.0.1",
    "poethepoet>=0.47.0",
    "pytest>=9.0.3",
    "types-python-dateutil>=2.9.0.20260518",
  ]

[build-system]
  requires      = [
    "uv_build>=0.11.2,<0.12.0",
  ]
  build-backend = "uv_build"

[tool.coverage.run]
  data_file   = ".cache/.coverage"
  source_pkgs = ["scheduled_report_aggregator"]

[tool.coverage.report]
  show_missing = true

[tool.docker]
  # Paths relative to /app that the entrypoint will chown to nonroot:nonroot.
  # Typically these are directories that will be bind-mounted as Docker volumes.
  chown_paths = [
    "persisted_data",
  ]
  mkdirs      = ["file_holding", "timeclock_playground"]

[tool.poe]
  include_script = "poe_tasks:tasks"

  [tool.poe.tasks.sync]
    help  = "Sync venv and ensure this project's scripts win over same-named dependency scripts"
    shell = "uv sync && uv sync --reinstall-package scheduled-report-aggregator"

[tool.pyright]
  extends = "../pyproject.toml"

[tool.pytest.ini_options]
  addopts      = [
    "--cov",
    "--cov-report=term-missing",
    "--strict-markers",
    "--strict-config",
    "-ra"
  ]
  cache_dir    = ".cache/pytest"
  testpaths    = ["tests"]
  xfail_strict = true
  asyncio_mode = "auto"

[tool.ruff]
  extend    = "../pyproject.toml"
  cache-dir = ".cache/ruff"

  src = ["./src"]

  [tool.ruff.lint.flake8-type-checking]
    runtime-evaluated-base-classes = [
      "pydantic.dataclasses.PydanticDataclass",
      "scheduled_report_aggregator.custom_types.IsPydantic",
      "aeth_ext.types.IsPydanticSlots",
    ]

[tool.uv]
  environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
  ]

  [tool.uv.sources]
    # aeth-ext                  = [
    #   { index = "SFTPyPI" },
    # ]
    aeth-ext                  = [
      { index = "SFTPyPI", marker = "sys_platform == 'linux'" },
      { path = "../aeth_ext", editable = true, marker = "sys_platform == 'win32'" },
    ]
    # timeclock-entry-processor = [
    #   { index = "SFTPyPI" },
    # ]
    timeclock-entry-processor = [
      { index = "SFTPyPI", marker = "sys_platform == 'linux'" },
      { path = "../timeclock_entry_processor", editable = true, marker = "sys_platform == 'win32'" }
    ]
    poe-tasks                 = [
      { index = "SFTPyPI" },
      # , marker = "sys_platform == 'linux'"
      # { path = "../poe_tasks", editable = true, marker = "sys_platform == 'win32'" },
    ]

  [[tool.uv.index]]
    name        = "SFTPyPI"
    url         = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/+simple"
    publish-url = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/"
    explicit    = true
